--- a/k8s/deploy-todolist.yaml
+++ b/k8s/deploy-todolist.yaml
@@ -37,6 +37,9 @@ spec:
         ports:
         - containerPort: 5432        # The port that the container exposes       
           name: postgres
+        env:
+        - name: POSTGRES_PASSWORD
+          value: abc123
 ---
 apiVersion: apps/v1           # API version
 kind: Deployment              # Type of kubernetes resource
