--- a/k8s/deploy-todolist.yaml
+++ b/k8s/deploy-todolist.yaml
@@ -69,9 +69,9 @@ spec:
             cpu: 0.2
             memory: "200Mi"
         env:                    # Environment variables supplied to the Pod
-        - name: POSTGRES_HOST
+        - name: POSTGRES_DB_HOST
           value: "todolist-service-postgres"
-        - name: POSTGRES_PORT
+        - name: POSTGRES_DB_PORT
           value: "5432"
 ---
 apiVersion: v1                   # API version
